src/styles/main.css
@import 'tailwindcss';

@import './shiki-transformers.css' layer(base);
@import './bprogress.css';

@config '../../typography.config.js';

@custom-variant dark {
  &:where([data-theme='dark'] *, [data-theme='dark']) {
    @slot;
  }

  @media (prefers-color-scheme: dark) {
    &:not(html[data-theme='light'] *, [data-theme='light']) {
      @slot;
    }
  }
}

@theme {
  --breakpoint-xs: 29.6875rem;

  --text-3sx: 0.5625rem;
  --text-3xs--line-height: 1;
  --text-2xs: 0.6875rem;
  --text-2xs--line-height: 1;

  --color-beige: oklch(0.8111 0.0308 59.21);

  --color-gray-50: var(--color-stone-50);
  --color-gray-100: var(--color-stone-100);
  --color-gray-200: var(--color-stone-200);
  --color-gray-300: var(--color-stone-300);
  --color-gray-400: var(--color-stone-400);
  --color-gray-500: var(--color-stone-500);
  --color-gray-600: var(--color-stone-600);
  --color-gray-700: var(--color-stone-700);
  --color-gray-800: var(--color-stone-800);
  --color-gray-900: var(--color-stone-900);
  --color-gray-950: var(--color-stone-950);

  --font-sans: var(--font-inter);
  --font-display: var(--font-outfit);
  --font-mono: var(--font-ibm-plex-mono);
  --font-pixel: var(--font-pixeloid);

  --animate-fade-in: fade-in 0.2s linear;
  --animate-outline-bounce: outline-bounce 0.3s;
  --animate-archive-tip: archive-tip 0.6s cubic-bezier(0.3, 0.2, 0.17, 3)
    forwards;
  --animate-flap: flap 0.2s linear 3;
  --animate-elevator: elevator 1.5s ease-in-out;

  @keyframes fade-in {
    from: {
      opacity: 0;
    }
    to: {
      opacity: 1;
    }
  }

  @keyframes outline-bounce {
    0%,
    100% {
      outline-offset: 4px;
    }
    50% {
      outline-offset: 6px;
    }
  }

  @keyframes flap {
    0%,
    100% {
      transform: scaleX(1);
    }
    50% {
      transform: scaleX(0.85);
    }
  }

  @keyframes archive-tip {
    0% {
      transform: translateY(0px);
    }
    50% {
      transform: translateY(2px);
    }
    100% {
      transform: translateY(0) rotate(8deg);
    }
  }

  @keyframes elevator {
    0% {
      transform: translateY(0px);
    }
    50% {
      transform: translateY(80%);
    }
    50.000001% {
      transform: translateY(-80%);
    }
    100% {
      transform: translateY(0px);
    }
  }
}

@layer base {
  *,
  ::after,
  ::before,
  ::backdrop,
  ::file-selector-button {
    border-color: var(--color-gray-200, currentColor);
  }
}

@utility effect-crt-blue {
  @apply text-sky-200;
  mask-image: url(./crt-lines.svg);
  mask-mode: luminance;
  padding: 10px;
  margin: -10px;
  text-shadow:
    0 0 3px rgb(30 64 175 / 1),
    0 0 10px rgb(29 78 216 / 0.6);
}

@utility bg-grainy {
  background-image: url(./grainy.svg);
}

@utility bg-grainy-light {
  background-image: url(./grainy-light.svg);
}

@utility bg-crt-lines {
  background-image: url(./crt-lines.svg);
}

@utility page-bg {
  @apply bg-grainy-light dark:bg-grainy bg-[#f2f1f0] bg-[length:200px_200px] dark:bg-[#141314];
}

@utility wrapper {
  @apply relative mx-auto max-w-2xl px-4;
}

.oembed {
  &.oembed-youtube iframe {
    width: 100%;
    height: 100%;
  }
}

html[data-theme='dark'] .shiki {
  color: var(--shiki-dark) !important;
  background-color: var(--shiki-dark-bg) !important;
  font-style: var(--shiki-dark-font-style) !important;
  font-weight: var(--shiki-dark-font-weight) !important;
  text-decoration: var(--shiki-dark-text-decoration) !important;
}

html[data-theme='dark'] .shiki span {
  color: var(--shiki-dark) !important;
  font-style: var(--shiki-dark-font-style) !important;
  font-weight: var(--shiki-dark-font-weight) !important;
  text-decoration: var(--shiki-dark-text-decoration) !important;
}

@media (prefers-color-scheme: dark) {
  .shiki:not(html[data-theme='light'] *) {
    color: var(--shiki-dark) !important;
    background-color: var(--shiki-dark-bg) !important;
    font-style: var(--shiki-dark-font-style) !important;
    font-weight: var(--shiki-dark-font-weight) !important;
    text-decoration: var(--shiki-dark-text-decoration) !important;
  }

  .shiki span:not(html[data-theme='light'] *) {
    color: var(--shiki-dark) !important;
    font-style: var(--shiki-dark-font-style) !important;
    font-weight: var(--shiki-dark-font-weight) !important;
    text-decoration: var(--shiki-dark-text-decoration) !important;
  }
}

:root {
  interpolate-size: allow-keywords;
}

